another bug fix

--- a/app/assets/stylesheets/components/_packages.scss
+++ b/app/assets/stylesheets/components/_packages.scss
@@ -79,8 +79,8 @@
   padding: 15px 20px;
   display: flex;
   a {
-    color: white;
     &:hover {
+      color: black;
       text-decoration: none;
     }
   }
