package main index item cards now turn green once they're added to your cart

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -9,8 +9,9 @@
   margin: 10px 0px;
 }
 
-.green-card {
-  border: solid green !important;
+.in-cart {
+  background-color: lightgreen;
+
 }
 
 .card-user {
