--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(42, 245, 152, 0.3) 0%, rgba(0, 158, 253, 0.35) 50%), url('../../assets/banner-image.jpg');">
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(42, 245, 152, 0.3) 0%, rgba(0, 158, 253, 0.35) 50%), url('http://res.cloudinary.com/dw8keir6d/image/upload/v1492796417/banner-image_cknspd.jpg');">
   <div class="banner-content">
     <%# simple_form_for @items do |form| %>
     <%#= form.input "min_price" %>
