when logged in the sidebar highlights dynamically. Plus a lot of other little changes

--- a/app/views/items/package_show.js.erb
+++ b/app/views/items/package_show.js.erb
@@ -1,3 +1,5 @@
+var category = "<%= @category %>";
+$("#sidebar-" + category).addClass("package-item-in-cart");
 $(".card-row").empty();
 var container = "<%= j render 'items/package_show', item: @item %>";
 $(".card-row").append($(container));
