--- a/app/views/pages/_package_page.html.erb
+++ b/app/views/pages/_package_page.html.erb
@@ -1,44 +1,38 @@
-<% @items.sort! { |i, j| i.category_id <=> j.category_id } %>
-<% for i in 0...@items.length do %>
-  <% if i % 3 == 0 %>
-      <div class="row">
-        <% for j in i..(i + 2) do %>
-          <div class="col-xs-12 col-md-4">
-            <% item = @items[j] %>
-            <% unless item.nil? %>
-              <%= link_to package_item_path(item: item.id), method: :post, remote: true do %>
-                <% if current_user %>
-                  <% not_cart = "<div class=\"card\">" %>
-                  <% cart = "<div class=\"card in-cart\">" %>
-                    <% order_item = OrderItem.joins(:order).where(item_id: item.id, package: true).where("orders.user_id = ?", current_user.id)[0] %>
-                    <% if order_item.cart %>
-                      <%= cart.html_safe %>
-                    <% else %>
-                      <%= not_cart.html_safe %>
-                    <% end %>
-                    <div class="card-user">
-                      <h1><%= Category.find(item.category_id).item_type %></h1>
-                      <p><%= item.brand %></p>
-                    </div>
-                    <div class="card-category">
-                      <p><%= "#{item.price / 100}" + "$" %></p>
-                    </div>
-                  </div>
-                <% else %>
-                  <div class="card">
-                    <div class="card-user">
-                      <h1><%= Category.find(item.category_id).item_type %></h1>
-                      <p><%= item.brand %></p>
-                    </div>
-                    <div class="card-category">
-                      <p><%= "#{item.price / 100}" + "$" %></p>
-                    </div>
-                  </div>
-                <% end %>
+<div class="row">
+  <% @items.sort { |i, j| i.category_id <=> j.category_id }.each_with_index do |item, i| %>
+    <div class="col-xs-12 col-md-4">
+      <% unless item.nil? %>
+        <%= link_to package_item_path(item: item.id), method: :post, remote: true do %>
+          <% if current_user %>
+            <% not_cart = "<div class=\"card\">" %>
+            <% cart = "<div class=\"card in-cart\">" %>
+              <% order_item = OrderItem.joins(:order).where(item_id: item.id, package: true).where("orders.user_id = ?", current_user.id)[0] %>
+              <% if order_item.cart %>
+                <%= cart.html_safe %>
+              <% else %>
+                <%= not_cart.html_safe %>
               <% end %>
-            <% end %>
-          </div>
+              <div class="card-user">
+                <h1><%= Category.find(item.category_id).item_type %></h1>
+                <p><%= item.brand %></p>
+              </div>
+              <div class="card-category">
+                <p><%= "#{item.price / 100}" + "$" %></p>
+              </div>
+            </div>
+          <% else %>
+            <div class="card">
+              <div class="card-user">
+                <h1><%= Category.find(item.category_id).item_type %></h1>
+                <p><%= item.brand %></p>
+              </div>
+              <div class="card-category">
+                <p><%= "#{item.price / 100}" + "$" %></p>
+              </div>
+            </div>
+          <% end %>
         <% end %>
-      </div>
+      <% end %>
+    </div>
   <% end %>
-<% end %>
+</div>
