--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -10,6 +10,7 @@
   justify-content: center;
   margin-top:-70px;
   padding-top: 0px;
+  background-image: linear-gradient(-225deg, rgba(42, 245, 152, 0.3) 0%, rgba(0, 158, 253, 0.35) 50%), image_url('banner-image.jpg');
 }
 .banner h1 {
   font-size: 50px;
@@ -33,3 +34,4 @@
   align-items: center;
   justify-content: center;
 }
+// http://res.cloudinary.com/dw8keir6d/image/upload/v1492796417/banner-image_cknspd.jpg
