--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
 
-  <p>Logo</p>
+  <%= image_tag "logo_zebrasclub_1.png" %>
   <%#= image_tag "https://unsplash.it/50" %>
 
   <% end %>
