checkout button tweek

--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -33,8 +33,9 @@
 
 .place-package-order {
   padding: 10px 40px;
+  color: black !important;
   a {
-    color: white !important;
+    color: black !important;
     &:hover {
       text-decoration: none;
     }
