--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,19 +1,19 @@
 <div class="navbar-wagon">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
-
-  <%= image_tag "logo_zebrasclub_1.png" %>
+<!-- <div class="logo"> -->
+  <%= image_tag "logo_complet_2.png" %>
   <%#= image_tag "https://unsplash.it/50" %>
-
+<!-- </div> -->
   <% end %>
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
     <div><%#= link_to "Package", "/package" %></div>
-    <!-- <div class="spaces"> -->
+
       <%= link_to "Buy Individual Items", items_path, class: "btn base-button" %>
       <div><%= link_to "", orderitems_path, class: "btn base-button fa fa-shopping-cart"%></div>
-    <!-- </div> -->
+
     <!-- Different navigation if login or not -->
     <% if user_signed_in? %>
 
