--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -25,8 +25,9 @@
 
 /* Navbar logo */
 .navbar-wagon-brand img {
-  width: 250px;
+  width: 270px;
   height: 100px;
+  margin-left: -40px;
 }
 
 /* Navbar right section (with form, links, button) */
