html margin removed

--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -30,8 +30,8 @@
   }
 }
 
-html {
-  min-height: 100%;
-  position: relative;
-  padding-bottom: 100px;
-}
+// html {
+//   min-height: 100%;
+//   position: relative;
+//   padding-bottom: 100px;
+// }
