--- a/app/views/pages/_package_page.html.erb
+++ b/app/views/pages/_package_page.html.erb
@@ -1,37 +1,23 @@
 <div class="row">
   <% @items.sort { |i, j| i.category_id <=> j.category_id }.each_with_index do |item, i| %>
     <div class="col-xs-12 col-md-4">
-      <% unless item.nil? %>
-        <%= link_to package_item_path(item: item.id), method: :post, remote: true do %>
-          <% if current_user %>
-            <% not_cart = "<div class=\"card\">" %>
-            <% cart = "<div class=\"card in-cart\">" %>
-              <% order_item = OrderItem.joins(:order).where(item_id: item.id, package: true).where("orders.user_id = ?", current_user.id)[0] %>
-              <% if order_item.cart %>
-                <%= cart.html_safe %>
-              <% else %>
-                <%= not_cart.html_safe %>
-              <% end %>
-              <div class="card-user">
-                <h1><%= Category.find(item.category_id).item_type %></h1>
-                <p><%= item.brand %></p>
-              </div>
-              <div class="card-category">
-                <p><%= "#{item.price / 100}" + "$" %></p>
-              </div>
-            </div>
-          <% else %>
-            <div class="card">
-              <div class="card-user">
-                <h1><%= Category.find(item.category_id).item_type %></h1>
-                <p><%= item.brand %></p>
-              </div>
-              <div class="card-category">
-                <p><%= "#{item.price / 100}" + "$" %></p>
-              </div>
-            </div>
-          <% end %>
+      <%= link_to package_item_path(item: item.id), method: :post, remote: true do %>
+        <% if current_user %>
+          <% order_item = OrderItem.joins(:order).where(item_id: item.id, package: true).where("orders.user_id = ?", current_user.id)[0] %>
+          <% in_cart = order_item.cart %>
+        <% else %>
+          <% session[:package_items].each { |j| in_cart = j["cart"] if j["item_id"] == item.id } %>
         <% end %>
+        <% y = in_cart ? "<div class=\"card in-cart\">" : "<div class=\"card\">"%>
+        <%= y.html_safe %>
+          <div class="card-user">
+            <h1><%= Category.find(item.category_id).item_type %></h1>
+            <p><%= item.brand %></p>
+          </div>
+          <div class="card-category">
+            <p>$<%=item.price / 100%>.00</p>
+          </div>
+        </div>
       <% end %>
     </div>
   <% end %>
