--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,66 +1,73 @@
 .card {
-  height: 175px;
-  // text-shadow: 0 1px 3px rgba(0,0,0,0.6);
-  background-size: cover !important;
+  background-color: white;
   color: black;
-  position: relative;
-  border: solid black;
+  text-decoration: none;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
   font-family: $base-font;
   margin: 10px 0px;
-}
-
-.in-cart {
-  background-color: lightgreen;
-
+  padding: 20px;
+  position: relative;
 }
 
 .sidebar-in-cart {
   color: lightgreen;
 }
 
-
-.card-user {
+.price {
   position: absolute;
-  right: 10px;
-  top: 10px;
-}
-.card-category {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  font-size: 10px;
-  text-transform: uppercase;
-}
-.card-description {
-  position: absolute;
+  right: 20px;
   bottom: 10px;
-  left: 10px;
-}
-.card-description h2 {
-  font-size: 24px;
-}
-.card-description p {
-  font-size: 13px;
+  margin-top: 15px;
+  color: grey;
+  font-weight: bold;
+  border-radius: 2px;
+  padding: 15px 20px;
+  p {
+    margin: 0;
   }
+}
+
+.in-cart {
+  background-color: lightgreen;
+  color: black;
+}
+
+.card-picture {
+  margin-bottom: 45px;
+  img {
+    width: 90%;
+    height: 90%;
+  }
+}
+
+.card-lower {
+  p {
+    display: inline-block;
+  }
+}
+
+.card-title {
+  margin-bottom: 10px;
+  h2 {
+    margin: 0;
+    display: inline-block;
+    font-weight: bolder;
+    font-size: 20px;
+    letter-spacing: 2px;
+  }
+}
+
 .card-link {
   position: absolute;
   top: 0;
   bottom: 0;
   right: 0;
   width: 100%;
-  z-index:2;
+  z-index: 2;
   background: black;
   opacity: 0;
 }
 .card-row{
-  // padding-top: 30px;
-  // padding-right: 30px;
-  // padding-left: 30px;
-  // padding-bottom: 30px;
-  // margin-top: 20px;
-  // box-shadow: 0 2px 3px rgba(0,0,0,0.6);
-  // height: 1000px !important;
-  // position: fixed;
   padding: 20px;
   background-color: rgb(245, 245, 245);
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
