--- a/app/assets/stylesheets/components/_packages.scss
+++ b/app/assets/stylesheets/components/_packages.scss
@@ -1,7 +1,8 @@
-.package-item-container{
-  display: flex;
+.package-item-show-container {
   height: 100%;
-  font-family: $base-font;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .package-item-photo {
@@ -11,7 +12,7 @@
 }
 
 .main-photo {
-  width: 340px;
+  width: 100%;
   // height: 80%;
   // background-size: cover!important;
   // border-top: 2px solid black;
@@ -45,6 +46,14 @@
 .package-item-details {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
+}
+
+.package-item-right-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .package-item-details-container {
@@ -104,6 +113,9 @@
     font-size: 20px;
     margin: 0;
   }
+  &:hover {
+    background-color: red;
+  }
 }
 
 .size-circle-on {
@@ -112,8 +124,12 @@
 }
 
 .package-item-buttons {
-  display: flex;
-  justify-content: space-around;
+  padding: 15px 30px;
+}
+
+.edit-delete {
+  display: inline-block;
+  margin-right: 30px;
 }
 
 .other-items {
@@ -124,6 +140,13 @@
       text-decoration: none;
     }
   }
+}
+
+.add-to-cart-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 20px;
 }
 
 .add-to-cart {
@@ -150,10 +173,11 @@
 }
 
 .back-button {
-  position: absolute;
-  top: -8px;
-  right: 11px;
+  padding: 10px 0;
+  position: relative;
   a {
+    position: absolute;
+    right: 11px;
     font-size: 20px;
     color: rgb(100, 100, 100);
     font-weight: thick;
@@ -163,15 +187,33 @@
   }
 }
 
-html {
-  @media (min-width: 1200px) {
-    .container {
-      width: 95vw !important;
-    }
+.package-item-nav-bar {
+  display: flex;
+  justify-content: space-between;
+  align-text: center;
+  padding: 0 20px;
+  height: 95px !important;
+
+}
+
+.nav-button-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  p {
+    margin: 0;
   }
-  @media (min-width: 992px) {
-    .container {
-      width: 90vw !important;
-    }
-  }
+}
+
+.nav-button {
+  height: 65px;
+  width: 65px;
+  border-radius: 50%;
+  background-color: grey;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: white;
+  font-size: 30px;
+  cursor: pointer;
 }
