--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -1,5 +1,4 @@
 .sidebar {
-  position: fixed;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,31 +7,78 @@
   padding: 20px;
   background-color: rgb(245, 245, 245);
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
-  right: 25px;
-  width: 270px;
   font-family: $base-font;
 }
 
 .package-item {
+  div {
+    height: 70px;
+  }
   display: flex;
+  justify-content: space-around;
   align-items: center;
+  margin: 9px 0;
+}
+
+.package-item-picture {
+  width: 80px;
+  img {
+    width: 70px;
+    height: 70px;
+  }
+}
+
+.package-item-middle {
+  display: flex;
+  height: 100%;
   justify-content: space-between;
-  width: 90%;
-  margin: 4px auto;
+  flex-direction: column;
   p {
     margin: 0;
   }
 }
+
+.package-item-category {
+  font-weight: bolder;
+}
+
+.package-item-right {
+  width: 35%;
+  min-width: 50px;
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  p {
+    margin: 0;
+  }
+}
+
+.package-item-price {
+  font-weight: bold;
+  font-size: 30px;
+}
+
+.package-item-in-cart-status {
+  background-color: grey;
+  color: white;
+  font-size: 11px;
+  padding: 1px 4px;
+  border-radius: 2px;
+}
+
+.package-item-in-cart {
+  color: black;
+  background-color: lightgreen;
+}
+
 .package-items {
   width: 100%;
 }
 
-.package-item-in-cart {
-  color: lightgreen;
-}
 
 .place-package-order {
-  padding: 10px 40px;
   color: black !important;
   a {
     color: black !important;
