--- a/app/views/items/_package_show.html.erb
+++ b/app/views/items/_package_show.html.erb
@@ -1,80 +1,95 @@
-<div class="row">
-  <div class="col-sm-5">
-    <%= image_tag @item.picture, class:"main-photo" %>
-    <div>
-      <%= image_tag @item.picture, class:"bottom-photo" %>
-      <%= image_tag @item.picture, class:"bottom-photo" %>
-      <%= image_tag @item.picture, class:"bottom-photo" %>
+<div class="package-item-show-container">
+  <div class="row" style="flex: 1 0;">
+    <div class="col-xs-12 col-sm-5">
+      <%= image_tag @item.picture, class:"main-photo" %>
     </div>
-  </div>
-  <div class="col-sm-7">
-    <div class="back-button">
-      <%= link_to "X", package_main_path, remote: true %>
-    </div>
-    <div class="package-item-main-header">
-      <h1><%= @category.upcase %></h1>
-      <h3>$<%= @item.price / 100 %>.00</h3>
-    </div>
-    <div class="package-item-sub-header">
-      <h3><%= @item.brand %></h3>
-    </div>
-    <div class="package-item-sizes">
-      <% if !@in_cart %>
-        <%= link_to "xs", edit_orderitem_path(@item, { size_update: true, size: "extra small" }), remote: true, method: :patch, class: "size-circle xs" %>
-        <%= link_to "sm", edit_orderitem_path(@item, { size_update: true, size: "small" }), remote: true, method: :patch, class: "size-circle sm" %>
-        <%= link_to "md", edit_orderitem_path(@item, { size_update: true, size: "medium" }), remote: true, method: :patch, class: "size-circle md" %>
-        <%= link_to "lg", edit_orderitem_path(@item, { size_update: true, size: "large" }), remote: true, method: :patch, class: "size-circle lg" %>
-        <%= link_to "xl", edit_orderitem_path(@item, { size_update: true, size: "extra large" }), remote: true, method: :patch, class: "size-circle xl" %>
-        <% if @has_size %>
-          <script>
-            <% case @item.size %>
-              <% when "extra small" %>
-                $(".size-circle").removeClass("size-circle-on");
-                $(".xs").addClass("size-circle-on");
-              <% when "small" %>
-                $(".size-circle").removeClass("size-circle-on");
-                $(".sm").addClass("size-circle-on");
-              <% when "medium" %>
-                $(".size-circle").removeClass("size-circle-on");
-                $(".md").addClass("size-circle-on");
-              <% when "large" %>
-                $(".size-circle").removeClass("size-circle-on");
-                $(".lg").addClass("size-circle-on");
-              <% when "extra large" %>
-                $(".size-circle").removeClass("size-circle-on");
-                $(".xl").addClass("size-circle-on");
+    <div class="col-xs-12 col-sm-7 package-item-right-div">
+      <div class="package-item-details">
+        <div class="back-button">
+          <%= link_to "X", package_main_path, remote: true %>
+        </div>
+        <div class="package-item-main-header">
+          <h1><%= @item.brand.upcase %></h1>
+        </div>
+        <div class="package-item-sub-header">
+          <h3>$<%= @item.price / 100 %>.00</h3>
+        </div>
+        <div class="package-item-sizes">
+          <% if !@in_cart %>
+            <%= link_to "xs", edit_orderitem_path(@item, { size_update: true, size: "extra small" }), remote: true, method: :patch, class: "size-circle xs" %>
+            <%= link_to "sm", edit_orderitem_path(@item, { size_update: true, size: "small" }), remote: true, method: :patch, class: "size-circle sm" %>
+            <%= link_to "md", edit_orderitem_path(@item, { size_update: true, size: "medium" }), remote: true, method: :patch, class: "size-circle md" %>
+            <%= link_to "lg", edit_orderitem_path(@item, { size_update: true, size: "large" }), remote: true, method: :patch, class: "size-circle lg" %>
+            <%= link_to "xl", edit_orderitem_path(@item, { size_update: true, size: "extra large" }), remote: true, method: :patch, class: "size-circle xl" %>
+            <% if @has_size %>
+              <script>
+                <% case @item.size %>
+                  <% when "extra small" %>
+                    $(".size-circle").removeClass("size-circle-on");
+                    $(".xs").addClass("size-circle-on");
+                  <% when "small" %>
+                    $(".size-circle").removeClass("size-circle-on");
+                    $(".sm").addClass("size-circle-on");
+                  <% when "medium" %>
+                    $(".size-circle").removeClass("size-circle-on");
+                    $(".md").addClass("size-circle-on");
+                  <% when "large" %>
+                    $(".size-circle").removeClass("size-circle-on");
+                    $(".lg").addClass("size-circle-on");
+                  <% when "extra large" %>
+                    $(".size-circle").removeClass("size-circle-on");
+                    $(".xl").addClass("size-circle-on");
+                <% end %>
+              </script>
             <% end %>
-          </script>
-        <% end %>
-      <% else %>
-        <h3><%= @item.size.capitalize %></h3>
-      <% end %>
-    </div>
-    <div class="package-item-description">
-      <p><%= @item.description %></p>
-    </div>
-    <div class="package-item-buttons">
-      <% if !@in_cart %>
-        <div>
-          <%= link_to "I don't want this...", edit_orderitem_path(@item, { remove_from_package: true }), remote: true, method: :patch %>
-        </div>
-        <div class="other-items-button">
-          <%= link_to "Other #{@category.pluralize}", package_items_path(category: @category, item: @item), remote: true, method: :post, class: "btn base-button other-items" %>
-        </div>
-        <div class="add-to-cart-button">
-          <% if @has_size %>
-            <%= link_to "Add to cart", edit_orderitem_path(@item), remote: true, method: :patch, class: "btn cart-button add-to-cart" %>
           <% else %>
-            <button class="btn cart-button add-to-cart">Please select a size</button>
+            <h3><%= @item.size.capitalize %></h3>
           <% end %>
         </div>
-      <% else %>
-        <h3>In Cart</h3>
-      <% end %>
+        <div class="package-item-buttons">
+          <% if !@in_cart %>
+            <div class="edit-delete">
+              <%= link_to "I don't want this...", edit_orderitem_path(@item, { remove_from_package: true }), remote: true, method: :patch %>
+            </div>
+            <div class="edit-delete">
+              <%= link_to "Other #{@category.pluralize}", package_items_path(category: @category, item: @item), remote: true, method: :post %>
+            </div>
+          <% end %>
+        </div>
+        <div class="package-item-description">
+          <p><%= @item.description %></p>
+        </div>
+      </div>
+      <div class="add-to-cart-container">
+        <% if !@in_cart %>
+          <% if @has_size %>
+            <%= link_to edit_orderitem_path(@item), remote: true, method: :patch do %>
+              <button class="btn cart-button add-to-cart"><i class="fa fa-shopping-cart" style="margin-right: 10px;"></i> Add to Cart</button>
+            <% end %>
+          <% else %>
+            <button class="btn cart-button add-to-cart">Select a size</button>
+          <% end %>
+        <% else %>
+          <h3>In Cart</h3>
+        <% end %>
+      </div>
+    </div>
+  </div>
+  <div class="package-item-nav-bar">
+    <div class="nav-button-container">
+      <div class="nav-button previous">
+        <i class="fa fa-arrow-left"></i>
+      </div>
+      <p>PREV</p>
+    </div>
+    <div class="nav-button-container">
+      <div class="nav-button next">
+        <i class="fa fa-arrow-right"></i>
+      </div>
+      <p>NEXT</p>
     </div>
   </div>
 </div>
-
 
 
 
