--- a/app/views/orderitems/index.html.erb
+++ b/app/views/orderitems/index.html.erb
@@ -42,6 +42,8 @@
 <% end %>
 <br>
 <br>
+
+<% if current_user %>
 <%= form_tag order_payments_path(@order) do %>
   <article>
     <label class="amount">
@@ -64,8 +66,7 @@
   <%#= t.submit 'Place Order', class: 'btn btn-primary' %>
 <%# end %>
 <%= link_to "Place Order", done_path, class: "btn btn-danger" %>
-
-
+<% end %>
 
 
 
