--- a/app/views/pages/package.html.erb
+++ b/app/views/pages/package.html.erb
@@ -17,7 +17,8 @@
                 <% else %>
                   <% session[:package_items].each { |j| in_cart = j["cart"] if j["item_id"] == i.id } %>
                 <% end %>
-                  <div class="package-item">
+                  <% y = "<div class=\"package-item\" id=\"sidebar-#{i.category.item_type}\">" %>
+                  <%= y.html_safe %>
                     <div class="package-item-picture">
                       <%= image_tag i.picture %>
                     </div>
@@ -27,15 +28,20 @@
                     </div>
                     <div class="package-item-right">
                       <% if in_cart %>
-                        <p class="package-item-in-cart-status package-item-in-cart">IN CART</p>
+                        <% x = "<p class=\"package-item-in-cart-status package-item-in-cart\" id=\"sidebar-#{i.category.item_type}\">" %>
+                        <% x.html_safe %>
+                        <p class="package-item-in-cart-status package-item-in-cart">
+                          IN CART
+                        </p>
                       <% else %>
-                        <p class="package-item-in-cart-status">WAITING</p>
+                        <% x = "<p class=\"package-item-in-cart-status\" id=\"sidebar-#{i.category.item_type}\">" %>
+                        <%  x.html_safe %>
+                        <p class="package-item-in-cart-status">
+                          WAITING
+                        </p>
                       <% end %>
                         <p class="package-item-price">$<%= i.price / 100 %></p>
                     </div>
-                  </div>
-                  <div class="package-item">
-
                   </div>
               <% end %>
             </div>
